// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Article JSON-LD — edge cases > no keywords, single content section 1`] = `
[
  {
    "@context": "https://schema.org",
    "@id": "https://phlabs.co.uk/resources/edge-no-keywords#article",
    "@type": "Article",
    "alternativeHeadline": "Edge-case subtitle",
    "articleBody": "Body of the cold-chain article.",
    "articleSection": "Test Category",
    "author": {
      "@type": "Organization",
      "name": "PH Labs UK",
      "url": "https://phlabs.co.uk",
    },
    "dateModified": "2026-01-01",
    "datePublished": "2026-01-01",
    "description": "Practical cold-chain shipping considerations for peptide research compounds.",
    "headline": "Cold-Chain Shipping Guide",
    "image": [
      "https://phlabs.co.uk/og-image.jpg",
    ],
    "inLanguage": "en-GB",
    "isAccessibleForFree": true,
    "keywords": "",
    "mainEntityOfPage": {
      "@id": "https://phlabs.co.uk/resources/edge-no-keywords",
      "@type": "WebPage",
    },
    "publisher": {
      "@type": "Organization",
      "logo": {
        "@type": "ImageObject",
        "url": "https://phlabs.co.uk/og-image.jpg",
      },
      "name": "PH Labs UK",
      "url": "https://phlabs.co.uk",
    },
    "timeRequired": "PT5M",
    "url": "https://phlabs.co.uk/resources/edge-no-keywords",
    "wordCount": 5,
  },
  {
    "@context": "https://schema.org",
    "@type": "BreadcrumbList",
    "itemListElement": [
      {
        "@type": "ListItem",
        "item": "https://phlabs.co.uk",
        "name": "Home",
        "position": 1,
      },
      {
        "@type": "ListItem",
        "item": "https://phlabs.co.uk/resources",
        "name": "Resources",
        "position": 2,
      },
      {
        "@type": "ListItem",
        "item": "https://phlabs.co.uk/resources/edge-no-keywords",
        "name": "Cold-Chain Shipping Guide",
        "position": 3,
      },
    ],
  },
]
`;

exports[`Article JSON-LD — edge cases > no readTime (timeRequired should still be a valid ISO duration) 1`] = `
[
  {
    "@context": "https://schema.org",
    "@id": "https://phlabs.co.uk/resources/edge-no-readtime#article",
    "@type": "Article",
    "alternativeHeadline": "Edge-case subtitle",
    "articleBody": "Storage notes body.",
    "articleSection": "Test Category",
    "author": {
      "@type": "Organization",
      "name": "PH Labs UK",
      "url": "https://phlabs.co.uk",
    },
    "dateModified": "2026-01-01",
    "datePublished": "2026-01-01",
    "description": "Storage at -20°C preserves peptide integrity for extended periods.",
    "headline": "Quick Note On Storage",
    "image": [
      "https://phlabs.co.uk/og-image.jpg",
    ],
    "inLanguage": "en-GB",
    "isAccessibleForFree": true,
    "keywords": "storage",
    "mainEntityOfPage": {
      "@id": "https://phlabs.co.uk/resources/edge-no-readtime",
      "@type": "WebPage",
    },
    "publisher": {
      "@type": "Organization",
      "logo": {
        "@type": "ImageObject",
        "url": "https://phlabs.co.uk/og-image.jpg",
      },
      "name": "PH Labs UK",
      "url": "https://phlabs.co.uk",
    },
    "timeRequired": "PT0M",
    "url": "https://phlabs.co.uk/resources/edge-no-readtime",
    "wordCount": 3,
  },
  {
    "@context": "https://schema.org",
    "@type": "BreadcrumbList",
    "itemListElement": [
      {
        "@type": "ListItem",
        "item": "https://phlabs.co.uk",
        "name": "Home",
        "position": 1,
      },
      {
        "@type": "ListItem",
        "item": "https://phlabs.co.uk/resources",
        "name": "Resources",
        "position": 2,
      },
      {
        "@type": "ListItem",
        "item": "https://phlabs.co.uk/resources/edge-no-readtime",
        "name": "Quick Note On Storage",
        "position": 3,
      },
    ],
  },
]
`;

exports[`Article JSON-LD — edge cases > unicode title + smart quotes + long subtitle 1`] = `
[
  {
    "@context": "https://schema.org",
    "@id": "https://phlabs.co.uk/resources/edge-unicode#article",
    "@type": "Article",
    "alternativeHeadline": "A deep dive into receptor pharmacology, half-life, and clinical trial outcomes across the GIP / GLP-1 / glucagon axis.",
    "articleBody": "Intro HTML tags should be stripped from articleBody. Mechanism Multiple paragraphs of content with links and other markup.",
    "articleSection": "Test Category",
    "author": {
      "@type": "Organization",
      "name": "PH Labs UK",
      "url": "https://phlabs.co.uk",
    },
    "dateModified": "2026-01-01",
    "datePublished": "2026-01-01",
    "description": "Análisis técnico — comparing triple-agonist Reτatrutide against dual-agonist Tirzepatide in metabolic research.",
    "headline": "“Reτatrutide” vs Tirzepatide — Δ in Efficacy?",
    "image": [
      "https://phlabs.co.uk/og-image.jpg",
    ],
    "inLanguage": "en-GB",
    "isAccessibleForFree": true,
    "keywords": "retatrutide, tirzepatide, GIP, GLP-1, glucagon",
    "mainEntityOfPage": {
      "@id": "https://phlabs.co.uk/resources/edge-unicode",
      "@type": "WebPage",
    },
    "publisher": {
      "@type": "Organization",
      "logo": {
        "@type": "ImageObject",
        "url": "https://phlabs.co.uk/og-image.jpg",
      },
      "name": "PH Labs UK",
      "url": "https://phlabs.co.uk",
    },
    "timeRequired": "PT5M",
    "url": "https://phlabs.co.uk/resources/edge-unicode",
    "wordCount": 18,
  },
  {
    "@context": "https://schema.org",
    "@type": "BreadcrumbList",
    "itemListElement": [
      {
        "@type": "ListItem",
        "item": "https://phlabs.co.uk",
        "name": "Home",
        "position": 1,
      },
      {
        "@type": "ListItem",
        "item": "https://phlabs.co.uk/resources",
        "name": "Resources",
        "position": 2,
      },
      {
        "@type": "ListItem",
        "item": "https://phlabs.co.uk/resources/edge-unicode",
        "name": "“Reτatrutide” vs Tirzepatide — Δ in Efficacy?",
        "position": 3,
      },
    ],
  },
]
`;

exports[`Article JSON-LD — edge cases > very long title (gets clamped) + many keywords 1`] = `
[
  {
    "@context": "https://schema.org",
    "@id": "https://phlabs.co.uk/resources/edge-long-title#article",
    "@type": "Article",
    "alternativeHeadline": "Edge-case subtitle",
    "articleBody": "Long article body.",
    "articleSection": "Test Category",
    "author": {
      "@type": "Organization",
      "name": "PH Labs UK",
      "url": "https://phlabs.co.uk",
    },
    "dateModified": "2026-01-01",
    "datePublished": "2026-01-01",
    "description": "A long-form review article on receptor pharmacology and acylation strategies.",
    "headline": "An Exhaustively Long Title About Every Possible Receptor Interaction, Half-Life Modulation, Acylation…",
    "image": [
      "https://phlabs.co.uk/og-image.jpg",
    ],
    "inLanguage": "en-GB",
    "isAccessibleForFree": true,
    "keywords": "receptor, half-life, acylation, pharmacology, review, peptide, modulation, downstream",
    "mainEntityOfPage": {
      "@id": "https://phlabs.co.uk/resources/edge-long-title",
      "@type": "WebPage",
    },
    "publisher": {
      "@type": "Organization",
      "logo": {
        "@type": "ImageObject",
        "url": "https://phlabs.co.uk/og-image.jpg",
      },
      "name": "PH Labs UK",
      "url": "https://phlabs.co.uk",
    },
    "timeRequired": "PT5M",
    "url": "https://phlabs.co.uk/resources/edge-long-title",
    "wordCount": 3,
  },
  {
    "@context": "https://schema.org",
    "@type": "BreadcrumbList",
    "itemListElement": [
      {
        "@type": "ListItem",
        "item": "https://phlabs.co.uk",
        "name": "Home",
        "position": 1,
      },
      {
        "@type": "ListItem",
        "item": "https://phlabs.co.uk/resources",
        "name": "Resources",
        "position": 2,
      },
      {
        "@type": "ListItem",
        "item": "https://phlabs.co.uk/resources/edge-long-title",
        "name": "An Exhaustively Long Title About Every Possible Receptor Interaction, Half-Life Modulation, Acylation Strategy, And Downstream Pharmacological Consequence Imaginable In Modern Peptide Research Today",
        "position": 3,
      },
    ],
  },
]
`;

exports[`Article JSON-LD — edge cases > very short excerpt + single-word title 1`] = `
[
  {
    "@context": "https://schema.org",
    "@id": "https://phlabs.co.uk/resources/edge-short#article",
    "@type": "Article",
    "alternativeHeadline": "Edge-case subtitle",
    "articleBody": "One-line article body for snapshot.",
    "articleSection": "Test Category",
    "author": {
      "@type": "Organization",
      "name": "PH Labs UK",
      "url": "https://phlabs.co.uk",
    },
    "dateModified": "2026-01-01",
    "datePublished": "2026-01-01",
    "description": "Short.",
    "headline": "HPLC",
    "image": [
      "https://phlabs.co.uk/og-image.jpg",
    ],
    "inLanguage": "en-GB",
    "isAccessibleForFree": true,
    "keywords": "hplc",
    "mainEntityOfPage": {
      "@id": "https://phlabs.co.uk/resources/edge-short",
      "@type": "WebPage",
    },
    "publisher": {
      "@type": "Organization",
      "logo": {
        "@type": "ImageObject",
        "url": "https://phlabs.co.uk/og-image.jpg",
      },
      "name": "PH Labs UK",
      "url": "https://phlabs.co.uk",
    },
    "timeRequired": "PT5M",
    "url": "https://phlabs.co.uk/resources/edge-short",
    "wordCount": 5,
  },
  {
    "@context": "https://schema.org",
    "@type": "BreadcrumbList",
    "itemListElement": [
      {
        "@type": "ListItem",
        "item": "https://phlabs.co.uk",
        "name": "Home",
        "position": 1,
      },
      {
        "@type": "ListItem",
        "item": "https://phlabs.co.uk/resources",
        "name": "Resources",
        "position": 2,
      },
      {
        "@type": "ListItem",
        "item": "https://phlabs.co.uk/resources/edge-short",
        "name": "HPLC",
        "position": 3,
      },
    ],
  },
]
`;

exports[`Product JSON-LD — edge cases > custom seoTitle / seoDescription override 1`] = `
[
  {
    "@context": "https://schema.org",
    "@id": "https://phlabs.co.uk/products/kpv#product",
    "@type": "Product",
    "additionalProperty": [
      {
        "@type": "PropertyValue",
        "name": "unit_pricing_measure",
        "value": "10 mg",
      },
    ],
    "aggregateRating": {
      "@type": "AggregateRating",
      "bestRating": "5",
      "ratingValue": "4.9",
      "reviewCount": "127",
      "worstRating": "1",
    },
    "brand": {
      "@type": "Brand",
      "name": "PH Labs",
      "url": "https://phlabs.co.uk",
    },
    "category": "Immunology Research",
    "description": "Buy KPV 10mg, ≥99% HPLC verified anti-inflammatory tripeptide for laboratory research. Cold-chain shipped from PH Labs UK.",
    "image": "https://phlabs.co.uk/products/kpv.jpg",
    "manufacturer": {
      "@type": "Organization",
      "name": "PH Labs UK",
      "url": "https://phlabs.co.uk",
    },
    "mpn": "edge_seo",
    "name": "KPV 10mg",
    "offers": {
      "@type": "Offer",
      "availability": "https://schema.org/InStock",
      "eligibleQuantity": {
        "@type": "QuantitativeValue",
        "unitCode": "MGM",
        "value": 10,
      },
      "hasMerchantReturnPolicy": {
        "@type": "MerchantReturnPolicy",
        "applicableCountry": "GB",
        "merchantReturnDays": 14,
        "returnFees": "https://schema.org/FreeReturn",
        "returnMethod": "https://schema.org/ReturnByMail",
        "returnPolicyCategory": "https://schema.org/MerchantReturnFiniteReturnWindow",
      },
      "itemCondition": "https://schema.org/NewCondition",
      "price": "27.00",
      "priceCurrency": "GBP",
      "shippingDetails": {
        "@type": "OfferShippingDetails",
        "deliveryTime": {
          "@type": "ShippingDeliveryTime",
          "handlingTime": {
            "@type": "QuantitativeValue",
            "maxValue": 1,
            "minValue": 0,
            "unitCode": "DAY",
          },
          "transitTime": {
            "@type": "QuantitativeValue",
            "maxValue": 2,
            "minValue": 1,
            "unitCode": "DAY",
          },
        },
        "shippingDestination": {
          "@type": "DefinedRegion",
          "addressCountry": "GB",
        },
        "shippingRate": {
          "@type": "MonetaryAmount",
          "currency": "GBP",
          "value": "4.99",
        },
      },
      "url": "https://phlabs.co.uk/products/kpv",
    },
    "size": "10 mg",
    "sku": "edge_seo",
    "url": "https://phlabs.co.uk/products/kpv",
    "weight": {
      "@type": "QuantitativeValue",
      "unitCode": "MGM",
      "value": 10,
    },
  },
  {
    "@context": "https://schema.org",
    "@type": "BreadcrumbList",
    "itemListElement": [
      {
        "@type": "ListItem",
        "item": "https://phlabs.co.uk",
        "name": "Home",
        "position": 1,
      },
      {
        "@type": "ListItem",
        "item": "https://phlabs.co.uk/products",
        "name": "Products",
        "position": 2,
      },
      {
        "@type": "ListItem",
        "item": "https://phlabs.co.uk/products/kpv",
        "name": "KPV 10mg",
        "position": 3,
      },
    ],
  },
]
`;

exports[`Product JSON-LD — edge cases > high-priced large molecular size 1`] = `
[
  {
    "@context": "https://schema.org",
    "@id": "https://phlabs.co.uk/products/tirzepatide-60mg#product",
    "@type": "Product",
    "additionalProperty": [
      {
        "@type": "PropertyValue",
        "name": "unit_pricing_measure",
        "value": "60 mg",
      },
    ],
    "aggregateRating": {
      "@type": "AggregateRating",
      "bestRating": "5",
      "ratingValue": "4.9",
      "reviewCount": "127",
      "worstRating": "1",
    },
    "brand": {
      "@type": "Brand",
      "name": "PH Labs",
      "url": "https://phlabs.co.uk",
    },
    "category": "Metabolic Research",
    "description": "Large-format research vial.",
    "image": "https://phlabs.co.uk/products/tirzepatide-60.jpg",
    "manufacturer": {
      "@type": "Organization",
      "name": "PH Labs UK",
      "url": "https://phlabs.co.uk",
    },
    "mpn": "edge_high",
    "name": "Tirzepatide 60mg",
    "offers": {
      "@type": "Offer",
      "availability": "https://schema.org/InStock",
      "eligibleQuantity": {
        "@type": "QuantitativeValue",
        "unitCode": "MGM",
        "value": 60,
      },
      "hasMerchantReturnPolicy": {
        "@type": "MerchantReturnPolicy",
        "applicableCountry": "GB",
        "merchantReturnDays": 14,
        "returnFees": "https://schema.org/FreeReturn",
        "returnMethod": "https://schema.org/ReturnByMail",
        "returnPolicyCategory": "https://schema.org/MerchantReturnFiniteReturnWindow",
      },
      "itemCondition": "https://schema.org/NewCondition",
      "price": "299.00",
      "priceCurrency": "GBP",
      "shippingDetails": {
        "@type": "OfferShippingDetails",
        "deliveryTime": {
          "@type": "ShippingDeliveryTime",
          "handlingTime": {
            "@type": "QuantitativeValue",
            "maxValue": 1,
            "minValue": 0,
            "unitCode": "DAY",
          },
          "transitTime": {
            "@type": "QuantitativeValue",
            "maxValue": 2,
            "minValue": 1,
            "unitCode": "DAY",
          },
        },
        "shippingDestination": {
          "@type": "DefinedRegion",
          "addressCountry": "GB",
        },
        "shippingRate": {
          "@type": "MonetaryAmount",
          "currency": "GBP",
          "value": "4.99",
        },
      },
      "url": "https://phlabs.co.uk/products/tirzepatide-60mg",
    },
    "size": "60 mg",
    "sku": "edge_high",
    "url": "https://phlabs.co.uk/products/tirzepatide-60mg",
    "weight": {
      "@type": "QuantitativeValue",
      "unitCode": "MGM",
      "value": 60,
    },
  },
  {
    "@context": "https://schema.org",
    "@type": "BreadcrumbList",
    "itemListElement": [
      {
        "@type": "ListItem",
        "item": "https://phlabs.co.uk",
        "name": "Home",
        "position": 1,
      },
      {
        "@type": "ListItem",
        "item": "https://phlabs.co.uk/products",
        "name": "Products",
        "position": 2,
      },
      {
        "@type": "ListItem",
        "item": "https://phlabs.co.uk/products/tirzepatide-60mg",
        "name": "Tirzepatide 60mg",
        "position": 3,
      },
    ],
  },
]
`;

exports[`Product JSON-LD — edge cases > no price (offer should be omitted) 1`] = `
[
  {
    "@context": "https://schema.org",
    "@id": "https://phlabs.co.uk/products/reference-standard#product",
    "@type": "Product",
    "additionalProperty": [
      {
        "@type": "PropertyValue",
        "name": "unit_pricing_measure",
        "value": "1 g",
      },
    ],
    "aggregateRating": {
      "@type": "AggregateRating",
      "bestRating": "5",
      "ratingValue": "4.9",
      "reviewCount": "127",
      "worstRating": "1",
    },
    "brand": {
      "@type": "Brand",
      "name": "PH Labs",
      "url": "https://phlabs.co.uk",
    },
    "category": "Standards",
    "description": "Reference standard for calibration.",
    "image": "https://phlabs.co.uk/products/reference.jpg",
    "manufacturer": {
      "@type": "Organization",
      "name": "PH Labs UK",
      "url": "https://phlabs.co.uk",
    },
    "mpn": "edge_noprice",
    "name": "Reference Standard 1g",
    "size": "1 g",
    "sku": "edge_noprice",
    "url": "https://phlabs.co.uk/products/reference-standard",
    "weight": {
      "@type": "QuantitativeValue",
      "unitCode": "GRM",
      "value": 1,
    },
  },
  {
    "@context": "https://schema.org",
    "@type": "BreadcrumbList",
    "itemListElement": [
      {
        "@type": "ListItem",
        "item": "https://phlabs.co.uk",
        "name": "Home",
        "position": 1,
      },
      {
        "@type": "ListItem",
        "item": "https://phlabs.co.uk/products",
        "name": "Products",
        "position": 2,
      },
      {
        "@type": "ListItem",
        "item": "https://phlabs.co.uk/products/reference-standard",
        "name": "Reference Standard 1g",
        "position": 3,
      },
    ],
  },
]
`;

exports[`Product JSON-LD — edge cases > out-of-stock, no SEO overrides, no measurement in name 1`] = `
[
  {
    "@context": "https://schema.org",
    "@id": "https://phlabs.co.uk/products/mystery-blend#product",
    "@type": "Product",
    "aggregateRating": {
      "@type": "AggregateRating",
      "bestRating": "5",
      "ratingValue": "4.9",
      "reviewCount": "127",
      "worstRating": "1",
    },
    "brand": {
      "@type": "Brand",
      "name": "PH Labs",
      "url": "https://phlabs.co.uk",
    },
    "category": "Blends",
    "description": "Custom research blend.",
    "image": "https://phlabs.co.uk/products/mystery-blend.jpg",
    "manufacturer": {
      "@type": "Organization",
      "name": "PH Labs UK",
      "url": "https://phlabs.co.uk",
    },
    "mpn": "edge_oos",
    "name": "Mystery Blend",
    "offers": {
      "@type": "Offer",
      "availability": "https://schema.org/OutOfStock",
      "hasMerchantReturnPolicy": {
        "@type": "MerchantReturnPolicy",
        "applicableCountry": "GB",
        "merchantReturnDays": 14,
        "returnFees": "https://schema.org/FreeReturn",
        "returnMethod": "https://schema.org/ReturnByMail",
        "returnPolicyCategory": "https://schema.org/MerchantReturnFiniteReturnWindow",
      },
      "itemCondition": "https://schema.org/NewCondition",
      "price": "19.99",
      "priceCurrency": "GBP",
      "shippingDetails": {
        "@type": "OfferShippingDetails",
        "deliveryTime": {
          "@type": "ShippingDeliveryTime",
          "handlingTime": {
            "@type": "QuantitativeValue",
            "maxValue": 1,
            "minValue": 0,
            "unitCode": "DAY",
          },
          "transitTime": {
            "@type": "QuantitativeValue",
            "maxValue": 2,
            "minValue": 1,
            "unitCode": "DAY",
          },
        },
        "shippingDestination": {
          "@type": "DefinedRegion",
          "addressCountry": "GB",
        },
        "shippingRate": {
          "@type": "MonetaryAmount",
          "currency": "GBP",
          "value": "4.99",
        },
      },
      "url": "https://phlabs.co.uk/products/mystery-blend",
    },
    "sku": "edge_oos",
    "url": "https://phlabs.co.uk/products/mystery-blend",
  },
  {
    "@context": "https://schema.org",
    "@type": "BreadcrumbList",
    "itemListElement": [
      {
        "@type": "ListItem",
        "item": "https://phlabs.co.uk",
        "name": "Home",
        "position": 1,
      },
      {
        "@type": "ListItem",
        "item": "https://phlabs.co.uk/products",
        "name": "Products",
        "position": 2,
      },
      {
        "@type": "ListItem",
        "item": "https://phlabs.co.uk/products/mystery-blend",
        "name": "Mystery Blend",
        "position": 3,
      },
    ],
  },
]
`;

exports[`Product JSON-LD — edge cases > very long name with unicode + microgram unit 1`] = `
[
  {
    "@context": "https://schema.org",
    "@id": "https://phlabs.co.uk/products/semaglutide-analogue-250mcg#product",
    "@type": "Product",
    "additionalProperty": [
      {
        "@type": "PropertyValue",
        "name": "unit_pricing_measure",
        "value": "250 mcg",
      },
    ],
    "aggregateRating": {
      "@type": "AggregateRating",
      "bestRating": "5",
      "ratingValue": "4.9",
      "reviewCount": "127",
      "worstRating": "1",
    },
    "brand": {
      "@type": "Brand",
      "name": "PH Labs",
      "url": "https://phlabs.co.uk",
    },
    "category": "Metabolic Research",
    "description": "Análogo of semaglutide — special-character description with “smart quotes” and em-dashes — for HPLC method development.",
    "image": "https://phlabs.co.uk/products/semaglutide.jpg",
    "manufacturer": {
      "@type": "Organization",
      "name": "PH Labs UK",
      "url": "https://phlabs.co.uk",
    },
    "mpn": "edge_long",
    "name": "Sémaglutide Análogo Ultra-Long-Acting 250 µg — Lot Δ12",
    "offers": {
      "@type": "Offer",
      "availability": "https://schema.org/InStock",
      "eligibleQuantity": {
        "@type": "QuantitativeValue",
        "unitCode": "MC",
        "value": 250,
      },
      "hasMerchantReturnPolicy": {
        "@type": "MerchantReturnPolicy",
        "applicableCountry": "GB",
        "merchantReturnDays": 14,
        "returnFees": "https://schema.org/FreeReturn",
        "returnMethod": "https://schema.org/ReturnByMail",
        "returnPolicyCategory": "https://schema.org/MerchantReturnFiniteReturnWindow",
      },
      "itemCondition": "https://schema.org/NewCondition",
      "price": "119.50",
      "priceCurrency": "GBP",
      "shippingDetails": {
        "@type": "OfferShippingDetails",
        "deliveryTime": {
          "@type": "ShippingDeliveryTime",
          "handlingTime": {
            "@type": "QuantitativeValue",
            "maxValue": 1,
            "minValue": 0,
            "unitCode": "DAY",
          },
          "transitTime": {
            "@type": "QuantitativeValue",
            "maxValue": 2,
            "minValue": 1,
            "unitCode": "DAY",
          },
        },
        "shippingDestination": {
          "@type": "DefinedRegion",
          "addressCountry": "GB",
        },
        "shippingRate": {
          "@type": "MonetaryAmount",
          "currency": "GBP",
          "value": "4.99",
        },
      },
      "url": "https://phlabs.co.uk/products/semaglutide-analogue-250mcg",
    },
    "size": "250 mcg",
    "sku": "edge_long",
    "url": "https://phlabs.co.uk/products/semaglutide-analogue-250mcg",
    "weight": {
      "@type": "QuantitativeValue",
      "unitCode": "MC",
      "value": 250,
    },
  },
  {
    "@context": "https://schema.org",
    "@type": "BreadcrumbList",
    "itemListElement": [
      {
        "@type": "ListItem",
        "item": "https://phlabs.co.uk",
        "name": "Home",
        "position": 1,
      },
      {
        "@type": "ListItem",
        "item": "https://phlabs.co.uk/products",
        "name": "Products",
        "position": 2,
      },
      {
        "@type": "ListItem",
        "item": "https://phlabs.co.uk/products/semaglutide-analogue-250mcg",
        "name": "Sémaglutide Análogo Ultra-Long-Acting 250 µg — Lot Δ12",
        "position": 3,
      },
    ],
  },
]
`;
